# Maya

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Hey-maya_en_android_v3_0_0.ppn
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/app/: MainActivity.java  Task.java  TaskAdapter.java  WhisperWrapper.java
app/src/main/res/drawable/: button_background_ripple.xml  rounded_background.xml
app/src/main/res/layout/: activity_main.xml  task_item.xml
app/src/main/res/values/: colors.xml
